# pre-commit-ai-checks

./: .gitignore  .justfile  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile
.devcontainer/vscode/: devcontainer.json
hooks/: _utils.py  grammar.py  silly_mistakes.py
src/ai_checks/: hooks.py
