[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-ai-checks"
version = "0.1.0"
description = "Pre-commit hooks for checking your projects with AI tools"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pre-commit",
    "openai",
    "anthropic",
    "python-dotenv",
    "pydantic",
]

[project.scripts]
grammar = "hooks.grammar:main"
silly-mistakes = "hooks.silly_mistakes:main"

[project.optional-dependencies]
dev = ["pytest"]
